# tflux

./: .dvcignore  .gitignore  README.md  analysis.py  config.py  data.dvc  environment.yml  grid.py  junction.py  linreg.py  mesh.py  outputs.dvc  pyproject.toml  temp.dvc  tflux_v6.py  visualization.py
.dvc/: config
TFlux/: analysis.py  config.py  main.py  preprocessing.py  tflux_v6.py  visualization.py
src/: __init__.py  grid.py  junction.py  linreg.py  main.py  mesh.py  preprocessing.py  visualization.py
src/tflux/: dtypes.py  main.py  types.py
src/tflux/analysis/: analysis.py  metrics.py  slope_analyzer.py
src/tflux/io/: obj_reader.py  paths.py  png_to_pdf.py
src/tflux/notebooks/: main.ipynb  test.ipynb
src/tflux/pipeline/: config.py  run.py
src/tflux/plotting/: axes.py  fft.py  figures.py  figures2.py  grids.py  junction_summary.py  linreg.py  plotting_utils.py  points.py  rcparams.py  sample_slope_hist.py  visualization.py
src/tflux/preprocessing/: gmm_bic_k.py  grid_utils.py  kmean_norms.py  kmean_norms2.py  vertices_utils.py
src/tflux/rendering/: junction_render.py
src/tflux/utils/: logging.py
