[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tflux-env"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    # conda-forge
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    # pip
    "mlflow",
    "dagshub",
    "dvc",
    "dvc-s3",
    "pyglet",
    "reportlab",
    "codetiming",
]

[project.optional-dependencies]
dev = [
    "spyder-kernels==3.1.*",
]

[tool.setuptools.packages.find]
where = ["src"]


